--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: pro6
+name: toku
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
+  audioplayers: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +62,14 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/p2.png
+    - assets/images/homeimages/
+    - assets/images/number/
+    - assets/images/color/
+    - assets/audio/number/
+    - assets/audio/color/
+    - assets/images/family/
+    - assets/audio/family/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -78,6 +86,9 @@ flutter:
     - family: Bangers
       fonts:
         - asset: fonts/Bangers-Regular.ttf
+    - family: Lexend
+      fonts:
+        - asset: fonts/Lexend-VariableFont_wght.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
