--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: toku
+name: news
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   audioplayers: ^6.1.0
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
@@ -62,13 +63,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/homeimages/
-    - assets/images/number/
-    - assets/images/color/
-    - assets/audio/number/
-    - assets/audio/color/
-    - assets/images/family/
-    - assets/audio/family/
+    - assets/images/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
