--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   audioplayers: ^6.1.0
   dio: ^5.7.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
