--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   audioplayers: ^6.1.0
   dio: ^5.7.0
   intl: ^0.19.0
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
